--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "element-resize-detector": "^1.2.1",
     "element-ui": "^2.13.0",
     "install": "^0.13.0",
+    "js-cookie": "^2.2.1",
     "js-sha1": "^0.6.0",
+    "jsencrypt": "^3.0.0-rc.1",
     "lib-flexible": "^0.3.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
