--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "core-js": "^3.4.3",
     "element-resize-detector": "^1.2.1",
     "element-ui": "^2.13.0",
+    "eslint": "^7.6.0",
+    "eslint-plugin-vue": "^6.2.2",
     "install": "^0.13.0",
+    "js-cookie": "^2.2.1",
     "js-sha1": "^0.6.0",
+    "jsencrypt": "^3.0.0-rc.1",
     "lib-flexible": "^0.3.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
@@ -28,8 +32,6 @@
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "lint-staged": "^9.4.3",
