--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "js-sha1": "^0.6.0",
     "jsencrypt": "^3.0.0-rc.1",
     "lib-flexible": "^0.3.2",
+    "vant": "^2.10.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "weixin-js-sdk": "^1.4.0-test"
