--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "element-ui": "^2.13.0",
     "eslint": "^7.6.0",
     "eslint-plugin-vue": "^6.2.2",
-    "install": "^0.13.0",
     "js-cookie": "^2.2.1",
     "js-sha1": "^0.6.0",
     "jsencrypt": "^3.0.0-rc.1",
     "lib-flexible": "^0.3.2",
+    "postcss-px2px-exclude": "^0.0.6",
     "vant": "^2.10.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
@@ -36,8 +36,8 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "lint-staged": "^9.4.3",
-    "postcss-pxtorem": "^4.0.1",
-    "px2rem-loader": "^0.1.9",
+    "postcss-pxtopx": "^4.0.1",
+    "px2px-loader": "^0.1.9",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
